@@ -38,7 +38,6 @@
 	<classpathentry kind="lib" path="lib/drools-5.1.1/ecj-3.5.1.jar"/>
 	<classpathentry kind="lib" path="lib/drools-5.1.1/mvel2-2.0.16.jar"/>
 	<classpathentry kind="lib" path="lib/json/json-20110113.jar"/>
-	<classpathentry kind="lib" path="lib/onewire/org.owfs.jowfsclient_0.9.0.jar"/>
 	<classpathentry kind="lib" path="lib/sunrise/SunriseSunsetLib-bin.jar"/>
 	<classpathentry kind="lib" path="lib/core/log4j/log4j-1.2.12.jar"/>
 	<classpathentry kind="con" path="com.genuitec.eclipse.j2eedt.core.J2EE14_CONTAINER"/>
@@ -55,5 +54,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/ORCommons"/>
 	<classpathentry kind="lib" path="lib/jzmq/zmq.jar"/>
 	<classpathentry kind="lib" path="lib/drools-5.1.1/drools-compiler-5.1.1_patched.jar"/>
+	<classpathentry kind="lib" path="lib/onewire/jowfsclient-1.2.0.jar"/>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
