@@ -11,6 +11,7 @@ New Features:
   - Update HTTP protocol to extend ReadCommand instead of
 	  implementing EventListener (Marcus Redeker, ORCJAVA-465)
   - More lenient CORS headers (Christian Bauer, ORCJAVA-472)
+  - Improve 1-wire implementation (Eric Bariaux, ORCJAVA-475)
 
 Controller Pro 1.1.0
 ====================
